[gd_scene load_steps=8 format=3 uid="uid://b34rt0x5masod"]

[ext_resource type="Script" path="res://zombie.gd" id="1_qt6aj"]
[ext_resource type="Script" path="res://custom_nodes/hurt_box_3D.gd" id="3_nbceb"]
[ext_resource type="PackedScene" uid="uid://dh5htexelqomh" path="res://models_3D/zombie/zombie_all_animations_with_death.gltf" id="3_qpl1k"]
[ext_resource type="PackedScene" uid="uid://2pegvisve484" path="res://blink_scene.tscn" id="4_thot1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5rxgg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kidmu"]
height = 1.6807
radius = 0.312292

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0nesk"]

[node name="Zombie" type="CharacterBody3D" groups=["zombies"]]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
collision_layer = 2
collision_mask = 15
script = ExtResource("1_qt6aj")

[node name="Pivot" type="Node3D" parent="."]

[node name="HurtBox3D" type="Area3D" parent="Pivot"]
script = ExtResource("3_nbceb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/HurtBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0619455, 1.00846, 0.120769)
shape = SubResource("CylinderShape3D_5rxgg")

[node name="zombie_all_animations_with_death" parent="Pivot" instance=ExtResource("3_qpl1k")]

[node name="Skeleton3D" parent="Pivot/zombie_all_animations_with_death/Armature" index="0"]
bones/0/position = Vector3(0.549957, -1.15679, -98.2672)
bones/0/rotation = Quaternion(-0.622843, -0.125645, 0.106283, 0.764842)
bones/1/position = Vector3(1.68912e-05, 9.63521, -1.63913e-07)
bones/1/rotation = Quaternion(0.0208226, -0.00528691, 0.0157899, 0.999645)
bones/2/position = Vector3(-1.09475e-06, 9.76648, -6.28684e-07)
bones/2/rotation = Quaternion(0.0650032, -0.0110546, 0.012198, 0.997749)
bones/3/position = Vector3(5.36467e-07, 9.8152, -9.5443e-07)
bones/3/rotation = Quaternion(0.0651063, -0.0100607, 0.0125186, 0.997749)
bones/4/position = Vector3(5.4975e-05, 31.1802, -6.47051)
bones/4/rotation = Quaternion(-0.0514323, 0.028127, -0.0222935, 0.998031)
bones/5/position = Vector3(2.73055e-05, 15.3718, -5.96046e-07)
bones/5/rotation = Quaternion(-0.195972, 0.121985, -0.0351995, 0.972356)
bones/6/position = Vector3(3.36275e-05, 18.5389, -6.01299)
bones/7/rotation = Quaternion(0.532123, 0.458658, -0.583583, 0.40732)
bones/8/position = Vector3(-3.97205e-06, 15.8515, 1.16752e-05)
bones/8/rotation = Quaternion(0.419134, 0.0492158, 0.19467, 0.885442)
bones/9/position = Vector3(2.16694e-06, 32.8837, 6.22501e-07)
bones/9/rotation = Quaternion(-1.42088e-06, 6.96856e-07, 0.67065, 0.741774)
bones/10/position = Vector3(5.56183e-06, 30.1582, 3.13986e-06)
bones/10/rotation = Quaternion(-0.231574, 0.181453, 0.0359188, 0.95507)
bones/11/position = Vector3(-4.91841, 5.22071, 2.16408)
bones/11/rotation = Quaternion(0.199081, 0.0741461, 0.206819, 0.955037)
bones/12/position = Vector3(-1.66925e-06, 2.42023, -1.48997e-06)
bones/12/rotation = Quaternion(0.0467132, 0.0171435, -0.00224967, 0.998759)
bones/13/position = Vector3(-9.53675e-06, 2.70602, 6.4373e-06)
bones/13/rotation = Quaternion(0.0228725, -0.102057, -0.34057, 0.934384)
bones/14/position = Vector3(5.36439e-06, 3.23907, 1.18911e-05)
bones/15/position = Vector3(-3.26451, 13.4906, 0.379611)
bones/15/rotation = Quaternion(0.109848, -0.088813, 0.079106, 0.986807)
bones/16/position = Vector3(-7.04286e-06, 2.59923, -5.93085e-06)
bones/16/rotation = Quaternion(0.177067, -0.0031621, -0.0238022, 0.983906)
bones/17/position = Vector3(7.48109e-07, 2.43617, -4.08708e-07)
bones/17/rotation = Quaternion(0.341671, -0.00150648, -0.0456104, 0.938711)
bones/18/position = Vector3(7.32277e-06, 3.12991, 4.34075e-06)
bones/19/position = Vector3(-5.04068e-06, 13.5924, -3.49291e-06)
bones/19/rotation = Quaternion(0.00188288, -0.00832728, 0.019479, 0.999774)
bones/20/position = Vector3(4.32355e-06, 2.64855, -7.11554e-06)
bones/20/rotation = Quaternion(0.451794, -0.0103566, -0.0578421, 0.890185)
bones/21/position = Vector3(-1.28004e-05, 3.52944, -2.78657e-06)
bones/21/rotation = Quaternion(0.154203, -0.00547048, -0.020253, 0.987816)
bones/22/position = Vector3(-1.14791e-05, 2.57632, 2.38997e-06)
bones/23/position = Vector3(3.07318, 12.9368, 0.039781)
bones/23/rotation = Quaternion(-0.149943, -0.00680115, -0.105014, 0.983078)
bones/24/position = Vector3(3.83673e-06, 2.70554, 3.40103e-06)
bones/24/rotation = Quaternion(0.219564, -0.00672783, -0.029121, 0.97514)
bones/25/position = Vector3(8.6524e-06, 2.07804, -2.94459e-07)
bones/25/rotation = Quaternion(0.313309, -0.00327389, -0.0414463, 0.948741)
bones/26/position = Vector3(7.98285e-06, 3.10788, -2.30364e-06)
bones/27/position = Vector3(5.65908, 11.5317, 0.354429)
bones/27/rotation = Quaternion(-0.0345357, 0.0369283, -0.216316, 0.975013)
bones/28/position = Vector3(1.02636e-06, 2.64307, 3.40387e-06)
bones/28/rotation = Quaternion(0.231256, -0.00543175, -0.0314956, 0.972368)
bones/29/position = Vector3(4.81109e-06, 2.08082, -4.92784e-06)
bones/29/rotation = Quaternion(0.459825, -0.00251134, -0.0620759, 0.885834)
bones/30/position = Vector3(-6.05105e-06, 1.72683, 4.70372e-06)
bones/31/rotation = Quaternion(0.579797, -0.432239, 0.5297, 0.443197)
bones/32/position = Vector3(1.32116e-06, 15.8516, 2.23662e-05)
bones/32/rotation = Quaternion(0.475993, 0.0263806, -0.209379, 0.853754)
bones/33/position = Vector3(-1.76126e-06, 32.8837, 1.90311e-07)
bones/33/rotation = Quaternion(-1.35856e-06, -6.47355e-07, -0.696303, 0.717748)
bones/34/position = Vector3(2.45945e-06, 30.1582, -2.24768e-06)
bones/34/rotation = Quaternion(0.0269017, -0.215921, -0.0622803, 0.974051)
bones/35/position = Vector3(4.91842, 5.2207, 2.164)
bones/35/rotation = Quaternion(0.0351029, -0.057948, -0.430139, 0.900217)
bones/36/position = Vector3(-4.52986e-06, 2.42008, -1.09727e-05)
bones/36/rotation = Quaternion(-0.0327263, 0.0583521, 0.392101, 0.917486)
bones/37/position = Vector3(-2.41395e-06, 2.70641, -2.71089e-06)
bones/37/rotation = Quaternion(-0.0123541, 0.00910736, -0.221884, 0.974952)
bones/38/position = Vector3(4.64916e-06, 3.23884, 3.36766e-06)
bones/39/position = Vector3(3.26451, 13.491, 0.379999)
bones/39/rotation = Quaternion(-0.181741, -0.00909472, 0.031346, 0.982805)
bones/40/position = Vector3(-8.04997e-06, 2.599, -2.03632e-06)
bones/40/rotation = Quaternion(0.378302, 0.0030691, 0.0503328, 0.924308)
bones/41/position = Vector3(-4.01734e-06, 2.436, 9.36318e-07)
bones/41/rotation = Quaternion(0.0713145, 0.00159107, 0.00954912, 0.997407)
bones/42/position = Vector3(4.82137e-06, 3.12998, 9.79588e-07)
bones/43/position = Vector3(-5.20346e-07, 13.592, 8.48488e-08)
bones/43/rotation = Quaternion(-0.126769, 0.00297694, 0.0275281, 0.991546)
bones/44/position = Vector3(-1.85138e-06, 2.64899, -3.59206e-06)
bones/44/rotation = Quaternion(0.496323, 0.00974967, 0.0621276, 0.865857)
bones/45/position = Vector3(-4.74122e-06, 3.52902, 4.11743e-06)
bones/45/rotation = Quaternion(0.376944, 0.00515432, 0.0493293, 0.924907)
bones/46/position = Vector3(5.35644e-06, 2.57699, -4.27655e-06)
bones/47/position = Vector3(-3.07323, 12.9369, 0.0399959)
bones/47/rotation = Quaternion(0.134427, 0.011222, 0.0692165, 0.98844)
bones/48/position = Vector3(8.71759e-06, 2.70511, -9.08878e-06)
bones/48/rotation = Quaternion(0.0574832, 0.00672847, 0.00833186, 0.998289)
bones/49/position = Vector3(-1.86351e-06, 2.078, -4.80672e-06)
bones/49/rotation = Quaternion(0.0490253, 0.00339855, 0.00663151, 0.99877)
bones/50/position = Vector3(3.5519e-06, 3.10799, -5.84545e-06)
bones/51/position = Vector3(-5.65913, 11.5317, 0.354)
bones/51/rotation = Quaternion(0.24953, 0.0175965, 0.0861108, 0.96437)
bones/52/position = Vector3(2.70147e-08, 2.64329, 9.66198e-06)
bones/52/rotation = Quaternion(0.46589, 0.00518875, 0.0624042, 0.882624)
bones/53/position = Vector3(6.31953e-06, 2.08101, -6.34123e-06)
bones/53/rotation = Quaternion(0.365781, 0.00260986, 0.0494495, 0.929383)
bones/54/position = Vector3(-3.20818e-06, 1.72602, 5.34326e-06)
bones/55/position = Vector3(10.9329, -7.22807, -0.321851)
bones/55/rotation = Quaternion(0.134901, 0.403774, 0.886776, -0.17999)
bones/56/position = Vector3(-4.82739e-07, 42.864, 1.40921e-06)
bones/56/rotation = Quaternion(-0.443052, -0.0616459, 0.0363179, 0.893636)
bones/57/position = Vector3(1.29373e-06, 49.119, 1.50509e-06)
bones/57/rotation = Quaternion(0.515607, -0.118192, -0.0933759, 0.843481)
bones/58/position = Vector3(-5.69185e-06, 19.3, -2.39871e-06)
bones/58/rotation = Quaternion(0.316592, -0.0344198, -0.00968499, 0.947888)
bones/59/position = Vector3(-4.26689e-07, 8.84992, -3.57981e-08)
bones/60/position = Vector3(-10.9328, -7.22793, -0.32185)
bones/60/rotation = Quaternion(-0.126358, 0.351929, 0.920422, 0.114028)
bones/61/position = Vector3(4.4866e-06, 42.8642, 3.71182e-06)
bones/61/rotation = Quaternion(-0.442643, 0.0723108, -0.0376335, 0.892985)
bones/62/position = Vector3(1.33799e-07, 49.1189, 9.017e-07)
bones/62/rotation = Quaternion(0.549546, 0.113924, 0.082375, 0.82355)
bones/63/position = Vector3(1.55245e-07, 19.3, -2.65049e-06)
bones/63/rotation = Quaternion(0.312718, 0.0342127, 0.00977132, 0.949179)
bones/64/position = Vector3(2.94307e-07, 8.84997, 4.17351e-08)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.961838, 0.0978127)
shape = SubResource("CylinderShape3D_kidmu")

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 2.0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
height = 2.01
radius = 1.01
debug_path_custom_color = Color(1, 0, 1, 1)

[node name="Blink" parent="." node_paths=PackedStringArray("mesh_to_blink") instance=ExtResource("4_thot1")]
mesh_to_blink = NodePath("../Pivot/zombie_all_animations_with_death/Armature/Skeleton3D/Yaku_zombie")
mesh = SubResource("StandardMaterial3D_0nesk")

[editable path="Pivot/zombie_all_animations_with_death"]
